3-integration/aad-oidc/aad-oidc-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: aad-oidc-ingress
  namespace: open-liberty-demo
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
  - hosts:
    - ${DOMAIN_NAME}
    secretName: tls-crt-secret
  rules:
  - host: ${DOMAIN_NAME}
    http:
      paths:
      - backend:
          serviceName: javaee-cafe-aad-oidc-ingress
          servicePort: 9080
        path: /(.*)
